# vmi

./: .gitignore  README.md  build_video.sh
CloudPhoneClient/AudioPlay/: CMakeLists.txt  build.gradle  build.sh  proguard-rules.pro
CloudPhoneClient/AudioPlay/src/main/: AndroidManifest.xml
CloudPhoneClient/AudioPlay/src/main/cpp/: CMakeLists.txt  JNIOpusWrapper.cpp  JNIOpusWrapper.h  cfi_blacklist.txt
CloudPhoneClient/AudioPlay/src/main/java/com/huawei/cloudgame/audioplay/: AUDIOSAVEHOOK.java  AUDIOSENDHOOK.java  AudioClientData.java  AudioRemoteMessage.java  AudioTrackPlayer.java  OpusJniWrapper.java
CloudPhoneClient/AudioPlay/src/main/res/values/: strings.xml
CloudPhoneClient/TouchCapture/: build.gradle  build.sh  gradle.properties  proguard-rules.pro
CloudPhoneClient/TouchCapture/src/main/: AndroidManifest.xml
CloudPhoneClient/VideoDecoder/: .gitignore  Android.mk  Application.mk  build.sh
CloudPhoneClient/VideoDecoder/Control/: CloudPhoneController.cpp  CloudPhoneController.h  NetController.cpp  NetController.h  Parser.cpp  Parser.h  VideoEngineClient.cpp
CloudPhoneClient/VideoDecoder/Decoder/: Android.mk  DecodeController.cpp  DecodeController.h  DecoderBase.h  ItemQueue.h  VideoUtil.cpp  VideoUtil.h  build.sh
CloudPhoneClient/VideoEngine/CloudPhoneUI/: .gitignore  adb启动命令指南.md  build.gradle  build.sh  local.properties  settings.gradle
CloudPhoneClient/VideoEngine/CloudPhoneUI/app/: build.gradle  proguard-rules.pro
CloudPhoneClient/VideoEngine/NdkDecoder/: Android.mk  DecoderBase.cpp  DecoderMedia.cpp  DecoderMedia.h  ItemQueue.h  build.sh
CloudPhoneService/VideoEngine/: build.sh
CloudPhoneService/VideoEngine/GpuEncTurbo/: Android.mk  Android.mk.asan  GpuEncodeFactory.cpp  GpuEncoderBase.h  GpuEncoderFactory.h  GpuEncoderParams.h  VaBitstream.cpp  VaBitstream.h  VaCommon.h  build.sh
CloudPhoneService/VideoEngine/GpuEncTurbo/CpuEncoder/: CpuEncoder.cpp  CpuEncoder.h
CloudPhoneService/VideoEngine/GpuEncTurbo/GpuEncoderAmd/: GpuEncoderAmd.cpp  GpuEncoderAmd.h  VaCommonAmd.h  VaEncoderAmd.cpp  VaEncoderAmd.h
CloudPhoneService/VideoEngine/GpuEncTurbo/GpuEncoderHantro/: AvcodecWrapper.h  DisplayServerMock.cpp  GpuEncoderHantro.cpp  GpuEncoderHantro.h  HantroCaptureWrapper.cpp  HantroCaptureWrapperBase.h  sync.c
CloudPhoneService/VideoEngine/GpuEncTurbo/GpuEncoderInno/: GpuEncoderInno.cpp  GpuEncoderInno.h  InnoFbcApi.h  VaEncInno.cpp  VaEncInno.h
CloudPhoneService/VideoEngine/Media/: build.sh
CloudPhoneService/VideoEngine/Media/video_codec/: Android.mk  VideoCodecApi.cpp  VideoCodecApi.h  VideoEncoderCommon.cpp  VideoEncoderCommon.h  VideoEncoderNetint.cpp  VideoEncoderNetint.h  VideoEncoderOpenH264.cpp  VideoEncoderOpenH264.h  VideoEncoderQuadra.cpp  VideoEncoderQuadra.h  VideoEncoderT432.cpp  VideoEncoderT432.h  VideoEncoderVastai.cpp  VideoEncoderVastai.h
CloudPhoneService/VideoEngine/Media/video_decoder/: Android.mk  VideoDecoderApi.cpp  VideoDecoderNetint.cpp  VideoDecoderNetint.h  VideoDecoderQuadra.cpp  VideoDecoderQuadra.h
CloudPhoneService/VideoScripts/: Dockerfile_NoVPU  Dockerfile_QuadraT2A  Dockerfile_T432  cfct_config  cfct_video  make_image.sh  manifest.xml
CloudPhoneService/VmiAgent/: Android.bp  Android.bp.asan  Android.mk  MainLooper.cpp  MainLooper.h  VmiAgent.cpp  VmiAgent.h  VmiAgentAndroidP.rc  VmiApi.cpp  VmiApi.h  build.sh  main.cpp
CloudPhoneService/VmiAgent/ApiTest/: ApiTest.cpp  ApiTest.h  ApiTestList.h  ThreadPool.h
CloudPhoneService/VmiAgent/NetworkComm/: INetworkComm.cpp  INetworkComm.h  NetworkComm.cpp  NetworkComm.h  NetworkCommManager.cpp  NetworkCommManager.h  NetworkExport.cpp  NetworkExport.h
Common/: Android.bp  Android.mk  Application.mk  CMakeLists.txt  build.sh
Common/Communication/: Android.bp  Android.mk  CMakeLists.txt  env.cmake
Common/Communication/Connection/: ClientConnection.cpp  ClientConnection.h  ConnectionSocket.cpp  ConnectionSocket.h  ServerConnection.cpp  ServerConnection.h
Common/Communication/Heartbeat/: Heartbeat.cpp  Heartbeat.h
Common/Communication/MsgFragment/: MsgFragment.cpp  MsgFragment.h  MsgReassemble.cpp  MsgReassemble.h
Common/Communication/NetComm/: NetComm.cpp  NetComm.h
Common/Communication/PacketHandle/: PacketHandle.cpp  PacketHandle.h
Common/Communication/PacketManager/: PacketManager.cpp  PacketManager.h
Common/Communication/Socket/: VmiSocket.cpp  VmiSocket.h
Common/Communication/StreamParse/: StreamParser.cpp  StreamParser.h
Common/Connection/: Connection.cpp  Connection.h
Common/Include/: CommonDefine.h  Communication.h  VmiDef.h  VmiEngine.h  VmiMsgHead.h
Common/Log/: LogInfo.cpp  LogInfo.h  logging.cpp  logging.h
Common/Utils/: BitmapImage.cpp  BitmapImage.h  EngineEventHandler.cpp  EngineEventHandler.h  Looper.cpp  Looper.h  MurmurHash.cpp  MurmurHash.h  PacketQueue.cpp  PacketQueue.h  SmartPtrMacro.h  SystemProperty.cpp  SystemProperty.h  VersionCheck.cpp  VersionCheck.h
doc/: 目录结构.md  编译脚本介绍.md
release/VideoEngineClient/include/: VideoEngineClient.h
scripts/: auto_install_tools.sh  build_env.conf  build_module_func.sh  cloud_ndk_build_func.sh  compile_log.sh  download_open_source.sh  opensource_repo.conf
unpack_open_source/hantro/DisplayServer/: DisplayServer.h
unpack_open_source/hantro/libavcodec/: avcodec.h  packet.h  vastapi.h  version.h
unpack_open_source/hantro/libavutil/: frame.h  hwcontext.h  hwcontext_vastapi.h  pixfmt.h
unpack_open_source/hantro/libvastdrm/: amdgpu_drm.h  drm.h  hantro_bufmgr.h  hantro_metadata.h
unpack_open_source/hantro/vastva/: va.h  va_backend.h  va_backend_vpp.h  va_compat.h  va_dec_hevc.h  va_dec_jpeg.h  va_dec_vp8.h  va_dec_vp9.h  va_drm.h  va_drmcommon.h  va_egl.h  va_enc_av1.h  va_enc_h264.h  va_enc_hevc.h  va_enc_jpeg.h  va_enc_mpeg2.h  va_enc_vp8.h  va_enc_vp9.h  va_fei.h  va_fei_h264.h  va_fei_hevc.h  va_str.h  va_tpi.h  va_version.h  va_vpp.h
unpack_open_source/libdrm/: Android.common.mk  Android.mk
unpack_open_source/libva/: Android.mk
unpack_open_source/opus/: Android.bp  Android.mk  CMakeLists.txt  OpusApi.cpp  OpusApi.h  build.sh
(+171 files in other folders)
